# bang

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  bang_engine.py  bang_fork.py  bang_multi_fork.mid  bang_sessions.jsonl  bang_v2.py  cli.py  dna_precieux.npy  main.py  morph_test.mid  pyproject.toml  tui.py  web.py
templates/: _log_entry.html  _pianoroll.html  _voices.html  _weather.html  index.html
