[project]
name = "bang-proto"
version = "0.2.0"
description = "Générateur MIDI algorithmique — DNA, polyrythmie, modes Noise/Ambient, song export 30 fichiers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "mido>=1.3.3",
    "numpy>=2.4.4",
    "python-rtmidi>=1.5.8",
    "textual>=8.2.6",
]

[project.scripts]
bang = "cli:main"
